2010-08-22  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/easy-mmode.el (define-minor-mode): Doc fix (Bug#6880).

2010-08-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Fix slow cursor movement (Bug#6172).  Reported by
	Christoph Groth <cwg@falma.de> and Liu Xin <x_liu@neusoft.com>.
	New version 13.0.
	(whitespace-empty-at-bob-regexp, whitespace-empty-at-eob-regexp):
	Adjust initialization.
	(whitespace-bob-marker, whitespace-eob-marker)
	(whitespace-buffer-changed): New vars.
	(whitespace-cleanup, whitespace-color-on, whitespace-color-off)
	(whitespace-empty-at-bob-regexp, whitespace-empty-at-eob-regexp)
	(whitespace-post-command-hook, whitespace-display-char-on):
	Adjust code.
	(whitespace-looking-back, whitespace-buffer-changed): New funs.
	(whitespace-space-regexp, whitespace-tab-regexp): Eliminate funs.

2010-08-21  Leo  <sdl.web@gmail.com>

	Fix buffer-list rename&refresh after after killing a buffer in ido.
	* lisp/ido.el: Revert Óscar's.
	(ido-kill-buffer-at-head): Exit the minibuffer with ido-exit=refresh.
	Remember the buffers at head, rather than their name.
	* lisp/iswitchb.el (iswitchb-kill-buffer): Re-make the list.

2010-08-21  Kirk Kelsey  <kirk.kelsey@0x4b.net>  (tiny change)
            Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/make-mode.el (makefile-fill-paragraph): Account for the
	extra backslash added to each line (bug#6890).

2010-08-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-key): Don't echo keystrokes (bug#6883).

2010-08-21  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-games-menu): Add landmark.

2010-08-20  Glenn Morris  <rgm@gnu.org>

	* align.el (align-regexp): Make group and spacing arguments
	use the interactive defaults when non-interactive.  (Bug#6698)

	* mail/rmail.el (rmail-forward): Replace mail-text-start with its
	expansion, so as not to need sendmail.
	(mail-text-start): Remove declaration.
	(rmail-retry-failure): Require sendmail.
